--- a/.github/workflows/mac-xcode.yml
+++ b/.github/workflows/mac-xcode.yml
@@ -26,6 +26,5 @@ jobs:
           cd build
           cmake -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Xcode ..
           cmake --build . --config Debug
-          ctest --build . -C Debug
-          ctest -T Test
+          ctest --test-dir . -C Debug
           sudo cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_INSTALL_CONFIG_NAME=Debug -P cmake_install.cmake
