--- a/.github/workflows/mac14-xcode16.yml
+++ b/.github/workflows/mac14-xcode16.yml
@@ -25,7 +25,6 @@ jobs:
           export OPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@3/3.1.1
           mkdir build
           cd build
-          cmake -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Xcode ..
-          cmake --build . --config Debug
-          ctest --test-dir . -C Debug
-          sudo cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_INSTALL_CONFIG_NAME=Debug -P cmake_install.cmake
+          cmake -DSITE:STRING="mac-14" -DBUILDNAME:STRING="xcode-16/d/-sz/+ros"  -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Xcode ..
+          ctest -D Experimental -C Debug
+
