--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -22,6 +22,13 @@ jobs:
           sudo snap install snapcraft --classic
           sudo sh -c 'echo "net.ipv4.conf.all.forwarding=1" > /etc/sysctl.d/99-forwarding.conf'
           sudo systemctl restart systemd-sysctl
+          sudo ufw allow in on lxdbr0
+          sudo ufw route allow in on lxdbr0
+          sudo ufw route allow out on lxdbr0
+          CIDR4="$(lxc network get lxdbr0 ipv4.address | sed 's|\.[0-9]\+/|.0/|')"
+          CIDR6="$(lxc network get lxdbr0 ipv6.address | sed 's|:[0-9]\+/|:/|')"
+          sudo ufw route allow in on lxdbr0 from "${CIDR4}"
+          sudo ufw route allow in on lxdbr0 from "${CIDR6}"
       - name: test
         shell: bash
         run: |
