--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -34,6 +34,8 @@ jobs:
         shell: bash
         run: |
           ./install.sh
+          getent group lxd >/dev/null || sudo groupadd --system lxd 
+          getent group lxd | grep -qwF "$USER" || sudo usermod -aG lxd "$USER"          
           sudo sh -c 'snapcraft'
       - name: Upload artifact
         uses: actions/upload-artifact@v4
