--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -16,6 +16,19 @@ jobs:
       - name: Install Snapcraft
         uses: samuelmeuli/action-snapcraft@v3
 
+      - name: network
+          sudo iptables -I DOCKER-USER -j ACCEPT
+          sudo sh -c 'echo "net.ipv4.conf.all.forwarding=1" > /etc/sysctl.d/99-forwarding.conf'
+          sudo systemctl restart systemd-sysctl
+          sudo ufw allow in on lxdbr0
+          sudo ufw route allow in on lxdbr0
+          sudo ufw route allow out on lxdbr0
+          CIDR4="$(lxc network get lxdbr0 ipv4.address | sed 's|\.[0-9]\+/|.0/|')"
+          CIDR6="$(lxc network get lxdbr0 ipv6.address | sed 's|:[0-9]\+/|:/|')"
+          sudo ufw route allow in on lxdbr0 from "${CIDR4}"
+          sudo ufw route allow in on lxdbr0 from "${CIDR6}"
+          sudo systemctl daemon-reload
+
       - name: test
         run: |
           sudo snapcraft
