--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -17,6 +17,7 @@ jobs:
         uses: samuelmeuli/action-snapcraft@v3
 
       - name: network
+        run: |
           sudo iptables -I DOCKER-USER -j ACCEPT
           sudo sh -c 'echo "net.ipv4.conf.all.forwarding=1" > /etc/sysctl.d/99-forwarding.conf'
           sudo systemctl restart systemd-sysctl
