--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -27,7 +27,8 @@ jobs:
       - name: vcpkg
         run: |
           ./install.sh
-
+          cat /home/runner/work/actions/actions/vcpkg/buildtrees/hermes-shm/config-x64-linux-out.log
+        continue-on-error: true
       - name: test
         run: |
           sudo snapcraft
