--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -45,3 +45,8 @@ jobs:
         with:
           name: iowarp_0.0.0_amd64.snap.zip
           path: ./iowarp_0.0.0_amd64.snap
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: iowarp_0.0.0_amd64.snap
