--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - '*'
 jobs:
   build:
     runs-on: ubuntu-24.04
@@ -45,7 +47,8 @@ jobs:
         with:
           name: iowarp_0.0.0_amd64.snap.zip
           path: ./iowarp_0.0.0_amd64.snap
-      - name: Release
+
+      - name: release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
