--- a/.github/workflows/h5py.yml
+++ b/.github/workflows/h5py.yml
@@ -2,7 +2,7 @@ name: h5py
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -26,7 +26,6 @@ jobs:
         ./spack/bin/spack spec py-h5py@master+mpi ^hdf5@develop-1.17
         ./spack/bin/spack install py-h5py@master+mpi ^hdf5@develop-1.17
         ./spack/bin/spack install py-pytest
-        ./spack/bin/spack install py-ipython
         ./spack/bin/spack install py-pip
         ./spack/bin/spack install py-pytest-mpi
         spack load py-h5py
