--- a/.github/workflows/win-vcpkg-hdf5-5182.yml
+++ b/.github/workflows/win-vcpkg-hdf5-5182.yml
@@ -23,7 +23,7 @@ jobs:
           cd build
           set libaec_ROOT="C:/vcpkg/packages/libaec_x64-windows"
           set
-          dir C:/vcpkg/packages/libaec_x64-windows
+          dir "C:/vcpkg/packages/libaec_x64-windows"
           cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win -DBUILDNAME:STRING="pr-5182/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON ..
           ctest -D Experimental -C Release
         shell: cmd
