--- a/.github/workflows/win-vcpkg-hdf5-5182-1.yml
+++ b/.github/workflows/win-vcpkg-hdf5-5182-1.yml
@@ -26,6 +26,6 @@ jobs:
           set libaec_INCLUDE="C:/vcpkg/packages/libaec_x64-windows/include"
           set
           dir "C:/vcpkg/packages/libaec_x64-windows"
-          cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win -DBUILDNAME:STRING="pr-5182/r/+inc+lib" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -Dlibaec_LIBRARY:FILEPATH="C:/vcpkg/packages/libaec_x64-windows/lib/szip.lib" -Dlibaec_INCLUDE:PATH="C:/vcpkg/packages/libaec_x64-windows/include" -Dlibaec_DIR:PATH="C:/vcpkg/packages/libaec_x64-windows" ..
+          cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win -DBUILDNAME:STRING="pr-5182/r/+inc+lib" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -Dlibaec_LIBRARY:FILEPATH="C:/vcpkg/packages/libaec_x64-windows/lib/szip.lib" -Dlibaec_INCLUDE:PATH="C:/vcpkg/packages/libaec_x64-windows/include" -Dlibaec_DIR:PATH="C:/vcpkg/packages/libaec_x64-windows" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DHDF5_ALLOW_EXTERNAL_SUPPORT:STRING=NO -DSZIP_USE_EXTERNAL:BOOL=OFF ..
           ctest -D Experimental -C Release
         shell: cmd
