ci(conda): verify

--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -14,5 +14,6 @@ jobs:
       - name: build-conda
         run: |
           conda install -y conda-build
+          conda list conda-build
           conda-build .
 
