--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   install:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - name: miniconda
         uses: conda-incubator/setup-miniconda@v3
@@ -15,5 +18,6 @@ jobs:
         run: |
           conda install -y conda-build
           conda list conda-build
+          which conda-build
           conda-build .
 
