--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-24.04
       - name: release
-        if: startsWith(github.ref, 'refs/tags/')
         run: |
-          echo "Tag name: ${{ github.event.release.tag_name }}"
-
+          if [[ "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
+             echo "Tag name: ${{ github.event.release.tag_name }}"
+          else
+             echo "No tag"
+          fi
