--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main-
-    tags:
-      - '*'
+#    tags:
+#      - '*'
 jobs:
   build:
     runs-on: ubuntu-24.04
