--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,4 +13,6 @@ jobs:
       - name: release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          echo "Tag name: ${{ github.event.release.tag_name }}"
+          tag_name=$(echo "${{ github.ref }}" | cut -d '/' -f 3-)
+          echo "Tag name: ${tag_name}"
+
