ci: test release

--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main-
-#    tags:
-#      - '*'
+    tags:
+      - '*'
 jobs:
   build:
     runs-on: ubuntu-24.04
@@ -42,14 +42,28 @@ jobs:
           cat /home/runner/work/actions/actions/vcpkg/buildtrees/hermes-shm/config-x64-linux-out.log
           sudo snapcraft
 
+      - name: set
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          tag_name=$(echo "${{ github.ref }}" | cut -d '/' -f 3-)
+          version="${tag_name#v}"
+          echo "Version without 'v': ${version}"
+          echo "IOWARP_VERSION=${version}" >> $GITHUB_ENV
+
+      - name: get
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          echo ${{ env.IOWARP_VERSION }}
+	  
       - name: upload
         uses: actions/upload-artifact@v4
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: iowarp_0.0.0_amd64.snap.zip
-          path: ./iowarp_0.0.0_amd64.snap
+          name: iowarp_${{ env.IOWARP_VERSION }}_amd64.snap.zip
+          path: ./iowarp_${{ env.IOWARP_VERSION }}_amd64.snap
 
       - name: release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: iowarp_${{ github.event.release.tag_name }}_amd64.snap
+          files: iowarp_${{ env.IOWARP_VERSION }}_amd64.snap
