--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,5 +18,6 @@ jobs:
           echo "Version without 'v': ${version}"
           echo "IOWARP_VERSION=${version}" >> $GITHUB_ENV
       - name: get
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
-          echo $IOWARP_VERSION
+          echo ${{ env.IOWARP_VERSION }}
