--- a/.github/workflows/win-ros3-offs.yml
+++ b/.github/workflows/win-ros3-offs.yml
@@ -61,8 +61,8 @@ jobs:
           -DHDF5_PACK_EXAMPLES:BOOL=OFF `
           -DHDF5_USE_FILE_LOCKING:BOOL=OFF `
           -DSITE:STRING="win" `
-          -DBUILDNAME:STRING="s3" `
+          -DBUILDNAME:STRING="off/s3" `
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" `
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" `
           ..
-          cmake -D Experimental
+          ctest -D Experimental
