ci(win,s3,off): openssl

--- a/.github/workflows/win-ros3-offs.yml
+++ b/.github/workflows/win-ros3-offs.yml
@@ -15,7 +15,7 @@ jobs:
           repository: HDFGroup/hdf5
       - name: Test ROS3
         run: |
-          vcpkg install curl
+          vcpkg install curl[openssl]
           mkdir build
           cd build
           cmake `
