--- a/.github/workflows/win-ros3-offs.yml
+++ b/.github/workflows/win-ros3-offs.yml
@@ -18,7 +18,7 @@ jobs:
           vcpkg install curl[openssl]
           mkdir build
           cd build
-          cmake `
+          cmake -G "Visual Studio 17 2022" -A x64 `
           -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" `
           -DBUILD_SHARED_LIBS:BOOL=ON `
           -DBUILD_STATIC_EXECS:BOOL=OFF `
