--- a/.github/workflows/win-vcpkg-hdf5-5182.yml
+++ b/.github/workflows/win-vcpkg-hdf5-5182.yml
@@ -3,7 +3,7 @@ name: win vcpkg hdf5 5182
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -24,6 +24,6 @@ jobs:
           set libaec_ROOT="C:/vcpkg/packages/libaec_x64-windows"
           set
           dir "C:/vcpkg/packages/libaec_x64-windows"
-          cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win -DBUILDNAME:STRING="pr-5182/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DHDF5_ALLOW_EXTERNAL_SUPPORT:STRING=NO -DSZIP_USE_EXTERNAL:BOOL=OFF ..
+          cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" -DBUILDNAME:STRING="pr-5182/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DHDF5_ALLOW_EXTERNAL_SUPPORT:STRING=NO -DSZIP_USE_EXTERNAL:BOOL=OFF ..
           ctest -D Experimental -C Release
         shell: cmd
