ci: use develop

--- a/.github/workflows/win-vcpkg-hdf5-5182.yml
+++ b/.github/workflows/win-vcpkg-hdf5-5182.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: byrnHDF/hdf5
-          ref: develop-libaec-fix
+          repository: HDFGroup/hdf5
       - name: libaec
         run: |
           vcpkg install libaec
