--- a/.github/workflows/win-ros3-offs.yml
+++ b/.github/workflows/win-ros3-offs.yml
@@ -19,6 +19,7 @@ jobs:
           mkdir build
           cd build
           cmake -G "Visual Studio 17 2022" -A x64 `
+          -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" `
           -DBUILD_SHARED_LIBS:BOOL=ON `
           -DBUILD_STATIC_EXECS:BOOL=OFF `
           -DBUILD_STATIC_LIBS:BOOL=OFF `
