--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -17,4 +17,4 @@ jobs:
           mkdir build
           cd build
           cmake -DSITE:STRING=win -DBUILDNAME:STRING="r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Release
+          ctest -T Build
