--- a/.github/workflows/win-vcpkg.yml
+++ b/.github/workflows/win-vcpkg.yml
@@ -3,7 +3,7 @@ name: win vcpkg tc
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -18,5 +18,5 @@ jobs:
           mkdir build
           cd build
           cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" -DBUILDNAME:STRING="vcpkg" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Release
+          ctest -T Build
         shell: cmd
