ci(vcpkg): ctest -T

--- a/.github/workflows/win-ros3-offs.yml
+++ b/.github/workflows/win-ros3-offs.yml
@@ -3,7 +3,7 @@ name: win s3 offs
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -65,4 +65,6 @@ jobs:
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" `
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" `
           ..
-          ctest -D Experimental
+          ctest -T Build
+          ctest -T Test
+
