--- a/.github/workflows/win-ros3-offs.yml
+++ b/.github/workflows/win-ros3-offs.yml
@@ -66,5 +66,7 @@ jobs:
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" `
           ..
           ctest -T Build
-          ctest -T Test
+          ctest -T Test -C Debug
+          ctest -T Submit
+	  
 
