--- a/.github/workflows/win-ros3.yml
+++ b/.github/workflows/win-ros3.yml
@@ -3,7 +3,7 @@ name: win ros3
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -12,8 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: derobins/hdf5
-          ref: moar_s3comms_cleanup
+          repository: HDFGroup/hdf5
       - name: Test ROS3
         run: |
           vcpkg install curl[openssl]
@@ -23,7 +22,7 @@ jobs:
           -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" `
           -DHDF5_ENABLE_ROS3_VFD:BOOL=ON `
           -DSITE:STRING="win" `
-          -DBUILDNAME:STRING="derobins/moar_s3comms_cleanup" `
+          -DBUILDNAME:STRING="s3" `
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" `
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" `
           ..
