--- a/.github/workflows/win-ros3-curl.yml
+++ b/.github/workflows/win-ros3-curl.yml
@@ -18,9 +18,9 @@ jobs:
           echo "CXX=cl.exe" >> $GITHUB_ENV
           echo "CC=cl.exe" >> $GITHUB_ENV
       - name: Install OpenSSL with Chocolatey
-        run: choco install openssl -y
-      - name: Setup curl
-        uses: kordlib/setup-curl@v1.0.0
+        run: choco install curl -y
+#      - name: Setup curl
+#        uses: kordlib/setup-curl@v1.0.0
       - name: Test ROS3
         run: |
           mkdir build
