--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -9,9 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     container: "fedora:latest"
     steps:
-      - name: Setup Fedora
+      - name: checkout
+        uses: actions/checkout@v4
+        with:
+          repository: iowarp/cte-hermes-shm
+          ref: dev
+      - name: install
         run: |
           dnf install -y \
               bzip2 curl file gcc-c++ gcc gcc-gfortran git gzip \
               make patch unzip which xz python3 python3-devel tree \
               cmake bison bison-devel libstdc++-static
+      - name: test
+        run: |
+          ls
+          mkdir build
+          cd build
+          cmake ..
