--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -19,7 +19,8 @@ jobs:
           dnf install -y \
               bzip2 curl file gcc-c++ gcc gcc-gfortran git gzip \
               make patch unzip which xz python3 python3-devel tree \
-              cmake bison bison-devel libstdc++-static
+              cmake bison bison-devel libstdc++-static catch2-devel \
+             cereal-dev openmpi-dev gcc-omp
       - name: test
         run: |
           ls
