--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -19,8 +19,18 @@ jobs:
           dnf install -y \
               bzip2 curl file gcc-c++ gcc gcc-gfortran git gzip \
               make patch unzip which xz python3 python3-devel tree \
-              cmake bison bison-devel libstdc++-static catch2-devel \
-             cereal-devel openmpi-devel libgomp
+              cmake bison bison-devel libstdc++-static \
+              cereal-devel openmpi-devel libgomp
+      - name: catch2
+        run: |
+          curl -O -L https://github.com/catchorg/Catch2/archive/refs/tags/v3.8.0.tar.gz
+          tar zxvf v3.8.0.tar.gz
+          cd Catch2-3.8.0/
+          mkdir build
+          cd build
+          cmake ..
+          make
+          sudo make install
       - name: test
         run: |
           ls
