--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -17,10 +17,10 @@ jobs:
       - name: install
         run: |
           dnf install -y \
-              bzip2 curl file gcc-c++ gcc gcc-gfortran git gzip \
-              make patch unzip which xz python3 python3-devel tree \
+              file gcc-c++ gcc gcc-gfortran git \
+              make patch unzip which python3 python3-devel tree \
               cmake bison bison-devel libstdc++-static \
-              cereal-devel openmpi-devel libgomp
+              cereal-devel openmpi-devel yaml-cpp-devel
       - name: catch2
         run: |
           curl -O -L https://github.com/catchorg/Catch2/archive/refs/tags/v3.8.0.tar.gz
