--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -19,6 +19,7 @@ jobs:
         run:  |
           sudo apt-get update
           sudo apt-get install \
+            autoconf automake autoconf-archive \
             libboost-dev libboost-fiber-dev libboost-regex-dev \
             libelf-dev openmpi-bin openmpi-common mpi-default-dev
 
