--- a/.github/workflows/lin-snap.yml
+++ b/.github/workflows/lin-snap.yml
@@ -41,7 +41,8 @@ jobs:
 
       - name: test
         run: |
-          cat /home/runner/work/actions/actions/vcpkg/buildtrees/hermes-shm/config-x64-linux-out.log
+          cat /home/runner/work/actions/actions/vcpkg/buildtrees/hermes-shm/*.log
+          cat /home/runner/work/actions/actions/vcpkg/buildtrees/hermes/*.log
           sudo snapcraft
 
       - name: set
