--- a/.github/workflows/ppc64.yml
+++ b/.github/workflows/ppc64.yml
@@ -54,6 +54,8 @@ jobs:
                 -DHDF4_BUILD_FORTRAN=OFF \
                 -DHDF4_BUILD_JAVA=OFF \
                 -DHDF4_BUILD_DOC=OFF \
+                -DJPEG_LIBRARY_RELEASE=/usr/lib/powerpc64le-linux-gnu/ \
+                -DJPEG_INCLUDE_DIR=/usr/include/ \
                 -DJPEG_USE_LOCALCONTENT=OFF \
                 -DLIBAEC_USE_LOCALCONTENT=OFF \
                 -DZLIB_USE_LOCALCONTENT=OFF \
