--- a/.github/workflows/ppc64.yml
+++ b/.github/workflows/ppc64.yml
@@ -57,8 +57,9 @@ jobs:
                 -DJPEG_LIBRARY=/usr/lib/powerpc64le-linux-gnu/ \
                 -DJPEG_INCLUDE_DIR=/usr/include/ \
                 -DJPEG_USE_EXTERNAL=OFF \
+                -DJPEG_USE_LOCALCONTENT=OFF \
                 -DLIBAEC_USE_LOCALCONTENT=OFF \
-                -DZLIB_USE_EXTERNAL=OFF \
+                -DZLIB_USE_LOCALCONTENT=OFF \
                 -DHDF4_PACK_EXAMPLES:BOOL=ON \
                 -DHDF4_PACKAGE_EXTLIBS:BOOL=ON \
                 ..
