--- a/.github/workflows/ppc64.yml
+++ b/.github/workflows/ppc64.yml
@@ -13,9 +13,7 @@ jobs:
     name: Ubuntu PowerPC CMake
 
     steps:
-      - uses: actions/checkout@v4.1.7
-        with:
-          repository: hyoklee/hdf4
+      - uses: actions/checkout@v4
 
       - uses: uraimo/run-on-arch-action@v2
         name: Run commands
@@ -43,26 +41,4 @@ jobs:
             ls -l /usr/include
             mkdir "build"
             cd "build"
-            cmake -C ../config/cmake/cacheinit.cmake \
-                -G Ninja \
-                --log-level=VERBOSE \
-                -DCMAKE_BUILD_TYPE=Debug \
-                -DCMAKE_TOOLCHAIN_FILE=../config/toolchain/gcc.cmake \
-                -DBUILD_SHARED_LIBS:BOOL=ON \
-                -DHDF4_BUILD_EXAMPLES=ON \
-                -DBUILD_JPEG_WITH_PIC:BOOL=ON \
-                -DHDF4_BUILD_FORTRAN=OFF \
-                -DHDF4_BUILD_JAVA=OFF \
-                -DHDF4_BUILD_DOC=OFF \
-                -DJPEG_LIBRARY=/usr/lib/powerpc64le-linux-gnu/ \
-                -DJPEG_INCLUDE_DIR=/usr/include/ \
-                -DJPEG_USE_EXTERNAL=OFF \
-                -DJPEG_USE_LOCALCONTENT=OFF \
-                -DLIBAEC_USE_LOCALCONTENT=OFF \
-                -DZLIB_USE_LOCALCONTENT=OFF \
-                -DHDF4_PACK_EXAMPLES:BOOL=ON \
-                -DHDF4_PACKAGE_EXTLIBS:BOOL=ON \
-                ..
-            cmake --build . --config Release
-            ctest . -C Release -V -E "MFHDF_TEST-hdftest|HDP-dumpsds-18"
-            cpack -C Release -V
+            cmake ..
