ci(ppc64le): u20

--- a/.github/workflows/ppc64-u20.yml
+++ b/.github/workflows/ppc64-u20.yml
@@ -1,9 +1,9 @@
-name: ppc64le u22 h4
+name: ppc64le u20 h4
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   powerpc-cmake:
@@ -21,7 +21,7 @@ jobs:
         id: runcmd
         with:
           arch: ppc64le
-          distro: ubuntu22.04
+          distro: ubuntu20.04
 
           # Not required, but speeds up builds by storing container images in
           # a GitHub package registry.
