ci(fed): test 1.14.6

--- a/.github/workflows/fed-hshsm.yml
+++ b/.github/workflows/fed-hshsm.yml
@@ -2,7 +2,7 @@ name: fedora
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   test:
@@ -12,15 +12,25 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
         with:
-          repository: HDFGroup/hdf5
-          ref: hdf5_1_14_6
+          repository: iowarp/cte-hermes-shm
+          ref: dev
       - name: install
         run: |
           dnf install -y \
               file gcc-c++ gcc gcc-gfortran git \
               make patch unzip which python3 python3-devel tree \
               cmake bison bison-devel libstdc++-static \
-              openmpi openmpi-devel
+              cereal-devel openmpi openmpi-devel yaml-cpp-devel boost-devel
+      - name: catch2
+        run: |
+          curl -O -L https://github.com/catchorg/Catch2/archive/refs/tags/v3.8.0.tar.gz
+          tar zxvf v3.8.0.tar.gz
+          cd Catch2-3.8.0/
+          mkdir build
+          cd build
+          cmake ..
+          make
+          sudo make install
       - name: test
         run: |
           source /etc/profile.d/modules.sh
