--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -30,7 +30,11 @@ jobs:
           ls
           mkdir build
           cd build
-          cmake ..
-          make
-          sudo make install
-          ctest -VV
+          cmake -DSITE:STRING="fed" -DBUILDNAME:STRING="6/f/p/hl" \
+          -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+          -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+          -DHDF5_BUILD_FORTRAN=ON \
+          -DHDF5_ENABLE_PARALLEL=ON \
+          -DHDF5_BUILD_HL_LIB=ON \
+          ..
+          ctest -D Experimental -C Release
