--- a/.github/workflows/u22-hdfview.yml
+++ b/.github/workflows/u22-hdfview.yml
@@ -12,9 +12,10 @@ jobs:
         run:  |
           sudo apt-get update
           sudo apt-get install hdfview x11vnc xvfb x11-apps imagemagick
+
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
-
+          run: echo "Hello"
       - name: Capture
           /usr/bin/hdfview
           xwd -root > screenshot.xwd
