--- a/.github/workflows/u22-hdfview.yml
+++ b/.github/workflows/u22-hdfview.yml
@@ -12,12 +12,12 @@ jobs:
         run:  |
           sudo apt-get update
           sudo apt-get install hdfview x11vnc xvfb x11-apps imagemagick
-
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: echo "Hello"
+          run: echo 'hello'
       - name: Capture
+        run: |
           /usr/bin/hdfview
           xwd -root > screenshot.xwd
           xwdtopnm screenshot.xwd > screenshot.ppm
