--- a/.github/workflows/u22-hdfview.yml
+++ b/.github/workflows/u22-hdfview.yml
@@ -15,10 +15,9 @@ jobs:
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: echo 'hello'
+          run: /usr/bin/hdfview
       - name: Capture
         run: |
-          /usr/bin/hdfview
           xwd -root > screenshot.xwd
           xwdtopnm screenshot.xwd > screenshot.ppm
           convert screenshot.ppm screenshot.png
