--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -1,8 +1,8 @@
-name: fedora
+name: fedora hdf5 1.14.6
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -21,6 +21,13 @@ jobs:
               make patch unzip which python3 python3-devel tree \
               cmake bison bison-devel libstdc++-static \
               openmpi openmpi-devel
+      - name: Create a new user
+        run: |
+          useradd -m hdftest
+          echo "hdftest:tmppasswd" | chpasswd
+      - name: Run PRTE as the new user
+        run: |
+          prte_command 	      
       - name: test
         run: |
           source /etc/profile.d/modules.sh
@@ -37,4 +44,4 @@ jobs:
           -DHDF5_ENABLE_PARALLEL=ON \
           -DHDF5_BUILD_HL_LIB=ON \
           ..
-          ctest -D Experimental -C Release
+          sudo -u hdftest ctest -D Experimental -C Release
