--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -27,7 +27,7 @@ jobs:
           echo "hdftest:tmppasswd" | chpasswd
       - name: test
         run: |
-          sudo -u cd /home/hdftest
+          sudo -u hdftest cd /home/hdftest
           sudo -u hdftest source /etc/profile.d/modules.sh
           sudo -u hdftest  module load mpi/openmpi-x86_64
           sudo -u hdftest mkdir build
